# Digital_Health_Template

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cookiecutter.json  deploy.sh
.github/workflows/: test_cookiecutter.yml
hooks/: post_gen_project.py
{{cookiecutter.project_name}}/: CHANGELOG.md  README.md  deploy.sh  model_card.md  pyproject.toml
{{cookiecutter.project_name}}/.github/: pull_request_template.md
{{cookiecutter.project_name}}/.github/workflows/: file_check.yml  large_file_check.yml  linting.yml  unit_test.yml
{{cookiecutter.project_name}}/docs/: conf.py  dataset_card.md  index.rst  model_card.md
