[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "{{cookiecutter.package_name}}"
version = "{{cookiecutter.version}}"
authors = [
  { name="{{cookiecutter.full_name}}", email="{{cookiecutter.email}}" },
]
description = "{{cookiecutter.project_short_description}}"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies =[]

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]
dev = ["ruff", "rsconnect-python", "nbstripout", "ipykernel"]

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
select = [
    "B",  # flake8-bugbear
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "C90",  # mccabe complexity
    "I",  # isort
]
