[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "{{cookiecutter.package_name}}"
version = "{{cookiecutter.version}}"
authors = [
    { name = "{{cookiecutter.full_name}}", email = "{{cookiecutter.email}}" },
]
description = "{{cookiecutter.project_short_description}}"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = []

[dependency-groups]
dev = [
    "ipykernel>=6.29.2",
    "pytest>=8.0.1",
    "nbstripout>=0.7.1",
    "pytest-cov>=5.0.0",
    "rsconnect-python>=1.24.0",
]
lint = ["ruff>=0.7.1"]

[tool.uv]
default-groups = ["dev", "lint"]

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
select = [
    "B",    # flake8-bugbear
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "C90",  # mccabe complexity
    "I",    # isort
    "ERA",  # Eradicate (commented out code)
    "A",    # flake8-builtins (overwriting python builtins)
    "PTH",  # flake8-use-pathlib
    "N",    # pep8-naming
    "D101", # pydocstyle: Missing docstring in class
    "D102", # pydocstyle: Missing docstring in method
    "D103", # pydocstyle: Missing docstring in function
]

[tool.ruff.lint.pep8-naming]
ignore-names = ["X"] # Allow the use of X, y as variables in scikit-learn
